@@ -9,30 +9,45 @@ ExeExt=${ExeExt:-}
 _kpsewhich=$KpsDir/kpsewhich$ExeExt
 _xdvipdfmx=$BinDir/xdvipdfmx$ExeExt
 
+if type kpsewhich > /dev/null 2>&1; then
+    otfpath=".//;"`kpsewhich -show-path='opentype fonts'`
+    otfpath=`echo $otfpath | sed -e 's,!!,,g'`
+fi
+
 TEXMFCNF=$srcdir/../kpathsea
 TFMFONTS=".;$srcdir/tests;$srcdir/data"
 T1FONTS="$srcdir/tests;$srcdir/data"
 TEXFONTMAPS="$srcdir/tests;$srcdir/data"
 DVIPDFMXINPUTS="$srcdir/tests;$srcdir/data"
 TEXPICTS=$srcdir/tests
-TEXFONTS=".;$srcdir/tests"
+TEXFONTS="./tmp001;$srcdir/tests"
 SOURCE_DATE_EPOCH=1588474800
 export TEXMFCNF TFMFONTS T1FONTS TEXFONTMAPS DVIPDFMXINPUTS TEXPICTS TEXFONTS SOURCE_DATE_EPOCH
 
+if type kpsewhich > /dev/null 2>&1; then
+    echo $otfpath
+else
+    otfpath=".//;"`$_kpsewhich -show-path='opentype fonts'`
+    echo $otfpath
+fi
+OPENTYPEFONTS=`$_kpsewhich "--cnf-line=OPENTYPEFONTS=$otfpath" -show-path='opentype fonts'`
+export OPENTYPEFONTS
+echo "OPENTYPEFONTS::" $OPENTYPEFONTS
+
 failed=
+
+test -d tmp001 || mkdir -p tmp001
 
 #####  following tests require HaranoAji fonts  #####
 
-$_kpsewhich HaranoAjiMincho-Regular.otf
-otfpath=`$_kpsewhich HaranoAjiMincho-Regular.otf` || exit 77
-OPENTYPEFONTS=`echo $otfpath | sed -e 's,HaranoAjiMincho-Regular\.otf,,' -e 's,/fonts/opentype/.*$,/fonts/opentype//,'`
-export OPENTYPEFONTS
+$_kpsewhich HaranoAjiMincho-Regular.otf || exit 77
+$_kpsewhich HaranoAjiGothic-Normal.otf || exit 77
 
-rm -f upjf.vf upjv.vf upjf-r.ofm upjv-r.ofm
+rm -f ./tmp001/upjf.vf ./tmp001/upjv.vf
 
 echo "*** dvipdfmx: test for upjf2_full-hara.pdf" && echo \
-	&& cp $srcdir/tests/upjf2_full.vf ./upjf.vf \
-	&& cp $srcdir/tests/upjv2_full.vf ./upjv.vf \
+	&& cp $srcdir/tests/upjf2_full.vf ./tmp001/upjf.vf \
+	&& cp $srcdir/tests/upjv2_full.vf ./tmp001/upjv.vf \
 	&& $_xdvipdfmx --dvipdfmx -vv --pdfm-str-utf8 -f upjf-hara.map -o upjf2.pdf $srcdir/tests/upjf2.dvi \
 	&& mv ./upjf2.pdf ./upjf2_full-hara.pdf \
 	&& echo && echo "dvipdfmx-upjf2-vf_full-hara tests OK" && echo \
