@@ -9,35 +9,54 @@ ExeExt=${ExeExt:-}
 _kpsewhich=$KpsDir/kpsewhich$ExeExt
 _xdvipdfmx=$BinDir/xdvipdfmx$ExeExt
 
+if type kpsewhich > /dev/null 2>&1; then
+    otfpath=".//;"`kpsewhich -show-path='opentype fonts'`
+    otfpath=`echo $otfpath | sed -e 's,!!,,g'`
+fi
+
 TEXMFCNF=$srcdir/../kpathsea
 TFMFONTS=".;$srcdir/tests;$srcdir/data"
 T1FONTS="$srcdir/tests;$srcdir/data"
 TEXFONTMAPS="$srcdir/tests;$srcdir/data"
 DVIPDFMXINPUTS="$srcdir/tests;$srcdir/data"
 TEXPICTS=$srcdir/tests
-TEXFONTS=".;$srcdir/tests"
+TEXFONTS="./tmp002;$srcdir/tests"
 SOURCE_DATE_EPOCH=1588474800
 export TEXMFCNF TFMFONTS T1FONTS TEXFONTMAPS DVIPDFMXINPUTS TEXPICTS TEXFONTS SOURCE_DATE_EPOCH
 
+if type kpsewhich > /dev/null 2>&1; then
+    echo $otfpath
+else
+    otfpath=".//;"`$_kpsewhich -show-path='opentype fonts'`
+    echo $otfpath
+fi
+OPENTYPEFONTS=`$_kpsewhich "--cnf-line=OPENTYPEFONTS=$otfpath" -show-path='opentype fonts'`
+export OPENTYPEFONTS
+echo "OPENTYPEFONTS::" $OPENTYPEFONTS
+
+TTFONTS=".//"
+echo $TTFONTS
+export TTFONTS
+
 failed=
+
+test -d tmp002 || mkdir -p tmp002
 
 #####  following tests require HaranoAji fonts and Noto Hentaigana font  #####
 
-$_kpsewhich HaranoAjiMincho-Regular.otf
-otfpath=`$_kpsewhich HaranoAjiMincho-Regular.otf` || exit 77
-OPENTYPEFONTS=`echo $otfpath | sed -e 's,HaranoAjiMincho-Regular\.otf,,' -e 's,/fonts/opentype/.*$,/fonts/opentype//,'`
-export OPENTYPEFONTS
+$_kpsewhich HaranoAjiMincho-Regular.otf || exit 77
+$_kpsewhich HaranoAjiGothic-Normal.otf || exit 77
 
-$_kpsewhich NotoSerifHentaigana-Regular.ttf
-ttfpath=`$_kpsewhich NotoSerifHentaigana-Regular.ttf` || exit 77
-TTFONTS=`echo $ttfpath | sed -e 's,NotoSerifHentaigana-Regular\.ttf,,' -e 's,/fonts/truetype/.*$,/fonts/truetype//,'`
-export TTFONTS
+#$_kpsewhich NotoSerifHentaigana-Regular.ttf
+#ttfpath=`$_kpsewhich NotoSerifHentaigana-Regular.ttf` || exit 77
+#TTFONTS=`echo $ttfpath | sed -e 's,NotoSerifHentaigana-Regular\.ttf,,' -e 's,/fonts/truetype/.*$,/fonts/truetype//,'`
+#export TTFONTS
 
-rm -f upjf.vf upjv.vf upjf-r.ofm upjv-r.ofm upjf-g.ofm upjv-g.ofm
+rm -f ./tmp002/upjf.vf ./tmp002/upjv.vf
 
 echo "*** dvipdfmx: test for upjf3_full-noto.pdf" && echo \
-	&& cp $srcdir/tests/upjf3_full.vf ./upjf.vf \
-	&& cp $srcdir/tests/upjv3_full.vf ./upjv.vf \
+	&& cp $srcdir/tests/upjf3_full.vf ./tmp002/upjf.vf \
+	&& cp $srcdir/tests/upjv3_full.vf ./tmp002/upjv.vf \
 	&& $_xdvipdfmx --dvipdfmx -vv --pdfm-str-utf8 -f upjf-noto.map -o upjf3.pdf $srcdir/tests/upjf3.dvi \
 	&& mv ./upjf3.pdf ./upjf3_full-noto.pdf \
 	&& echo && echo "dvipdfmx-upjf3-vf_full-noto tests OK" && echo \
@@ -48,8 +67,8 @@ echo "*** dvipdfmx: test for upjf3_full-noto.pdf" && echo \
 $_kpsewhich ipamjm.ttf || exit 77
 
 echo "*** dvipdfmx: test for upjf3_full-ipa.pdf" && echo \
-	&& cp $srcdir/tests/upjf4_full.vf ./upjf.vf \
-	&& cp $srcdir/tests/upjv4_full.vf ./upjv.vf \
+	&& cp $srcdir/tests/upjf4_full.vf ./tmp002/upjf.vf \
+	&& cp $srcdir/tests/upjv4_full.vf ./tmp002/upjv.vf \
 	&& $_xdvipdfmx --dvipdfmx -vv --pdfm-str-utf8 -f upjf-ipa.map -o upjf3.pdf $srcdir/tests/upjf3.dvi \
 	&& mv ./upjf3.pdf ./upjf3_full-ipa.pdf \
 	&& echo && echo "dvipdfmx-upjf3-vf_full-ipa tests OK" && echo \
