@@ -17,8 +17,10 @@ TEXFORMATS=.; export TEXFORMATS
 rm -f up-prim.*
 $LN_S $srcdir/uptexdir/tests/up-prim.tex ./up-prim.tex
 
-if test ! -f ./up-basic.fmt; then
+if test ! -f ./up-basic.tex; then
   cp $srcdir/tests/dump-basic.tex ./up-basic.tex
+fi
+if test ! -f ./up-basic.fmt; then
   $_uptex -ini up-basic || exit 1
 fi
 
