@@ -1,3 +1,10 @@
+2024-10-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* dvipdfmx-upjf{,2,3}.test, tests/upjf.tex,
+	tests/upjf{,-{hara,ipa,noto}}.map, tests/Makefike_upjf:
+	Update tests. Search system texmf for tfm/otf fonts
+	if kpathsearch is installed in the system.
+
 2024-09-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* tfm.c: More strict check to interpret OFM FONTDIR
